--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,9 @@ display: block;
 flex-basis: calc((100%-60px)/3);
 }
 
+.images-list-figcaption{
+  padding: 20px 24px;
+}
 
 .project-title {
   font-weight: 700;
