--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 :root {
   --font-primary: "Roboto", sans-serif;
   --font-secondary: "Raleway", sans-serif;
-  --font-color-primary: #757575;
-  --font-color-secondary: #212121;
-  --font-color-tertiary: #2196f3;
-  --font-color-quaternary: #ffffff;
-  --font-color-transparent: rgba(255, 255, 255, 0.6);
-  --background-color-primary: #2f303a;
-  --background-color-secondary: #f5f4fa;
+  --gray: #757575;
+  --black: #212121;
+  --blue: #2196f3;
+  --white: #ffffff;
+  --white-transparent: rgba(255, 255, 255, 0.6);
+  --background-black: #2f303a;
+  --background-white: #f5f4fa;
 }
 
 ul{
@@ -39,7 +39,7 @@ img{
 }
 body {
   font-family: var(--font-primary);
-  color: var(--font-color-primary);
+  color: var(--gray);
   margin: 0;
 }
 .logo-link .logo-link-dark-theme:hover,
@@ -52,21 +52,21 @@ body {
 .contacts-links-top:focus,
 .contacts-links-bottom:hover,
 .contacts-links-bottom:focus {
-  color: var(--font-color-tertiary);
+  color: var(--blue);
 }
 .logo-link {
   font-family: var(--font-secondary);
   font-size: 26px;
   line-height: 1.192;
-  color: var(--font-color-tertiary);
+  color: var(--blue);
   text-decoration: none;
   margin-right: 93px;
 }
 .logo-link-dark-theme {
-  color: var(--font-color-secondary);
+  color: var(--black);
 }
 .logo-link-light-theme {
-  color: var(--font-color-quaternary);
+  color: var(--white);
 }
 
 /* *********   HEADER  ********************/
@@ -74,7 +74,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.142;
-  color: var(--font-color-secondary);
+  color: var(--black);
   text-decoration: none;
   display: block;
   margin-right: 46px;
@@ -84,7 +84,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.142;
-  color: var(--font-color-tertiary);
+  color: var(--blue);
   text-decoration: none;
 }
 
@@ -92,7 +92,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.142;
-  color: var(--font-color-primary);
+  color: var(--gray);
   text-decoration: none;
 }
 
@@ -131,13 +131,13 @@ body {
 .block-main {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--background-color-primary);
+  background-color: var(--background-black);
 }
 
 .title-main {
   font-size: 44px;
   line-height: 1.363;
-  color: var(--font-color-quaternary);
+  color: var(--white);
   margin-bottom: 30px;
 }
 
@@ -156,8 +156,8 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  color: var(--font-color-quaternary);
-  background-color: var(--font-color-tertiary);
+  color: var(--white);
+  background-color: var(--blue);
 }
 
 .section-descriptions-list{
@@ -180,7 +180,7 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.142;
-  color: var(--font-color-secondary);
+  color: var(--black);
   margin-bottom: 10px;
 }
 .section-descriptions-list-description {
@@ -198,7 +198,7 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.166;
-  color: var(--font-color-secondary);
+  color: var(--black);
 }
 
 .section-images-list{
@@ -207,7 +207,7 @@ justify-content: space-between;
 }
 
 .section-gray{
-  background-color: var(--background-color-secondary);
+  background-color: var(--background-white);
 }
 
 .section-gray-list{
@@ -229,7 +229,7 @@ display: block;
   text-align: center;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: var(--font-color-quaternary);
+  background-color: var(--white);
 }
 
 
@@ -237,7 +237,7 @@ display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
-  color: var(--font-color-secondary);
+  color: var(--black);
   margin-bottom: 10px;
 }
 .employee-position {
@@ -259,8 +259,8 @@ display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
-  color: var(--font-color-secondary);
-  background-color: var(--background-color-secondary);
+  color: var(--black);
+  background-color: var(--background-white);
   border-radius: 4px;
   padding: 6px 22px;
   border-style: none;
@@ -277,8 +277,8 @@ display: block;
 .button-main:hover,
 .button-main.logo-link-light-theme:focus {
   cursor: pointer;
-  color: var(--font-color-quaternary);
-  background-color: var(--font-color-tertiary);
+  color: var(--white);
+  background-color: var(--blue);
 }
 
 .container .images-list{
@@ -302,7 +302,7 @@ flex-basis: calc((100%-60px)/3);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  color: var(--font-color-secondary);
+  color: var(--black);
 }
 .project-type {
   font-size: 16px;
@@ -311,7 +311,7 @@ flex-basis: calc((100%-60px)/3);
 
 /* *********   FOOTER  ********************/
 .page-bottom {
-  background-color: var(--background-color-primary);
+  background-color: var(--background-black);
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -330,13 +330,13 @@ display: block;
   font-size: 14px;
   line-height: 1.714;
   font-style: normal;
-  color: var(--font-color-quaternary);
+  color: var(--white);
   display: block;
   width: 246px;
   height: 81px;
 }
 .contacts-links-bottom {
   text-decoration: none;
-  color: var(--font-color-transparent);
+  color: var(--white-transparent);
   margin-bottom: 9px;
 }
